# csel-workspace

./: .gitignore
boot-scripts/: Makefile  boot.cifs  boot.net
report/: main.typ
src/02_modules/exercice01/: skeleton.c
src/02_modules/exercice02/: skeleton.c
src/02_modules/exercice04/: skeleton.c
src/02_modules/exercice05/: ex5module.ko  ex5module.mod  skeleton.c
src/02_modules/exercice06/: Makefile  ex6module.ko  ex6module.mod  skeleton.c
src/02_modules/exercice07/: Makefile  ex7module.ko  ex7module.mod  skeleton.c
src/02_modules/exercice08/: Makefile  ex8module.ko  skeleton.c
src/03_drivers/exercise01/: Makefile  main.c
src/03_drivers/exercise02_to_03/: Makefile  mydrivermodule.ko  mydrivermodule.mod  skeleton.c
src/03_drivers/exercise02_to_04/: mydrivermodule.ko  mydrivermodule.mod  skeleton.c
src/03_drivers/exercise04/src/: main.rs
src/03_drivers/exercise05/: Makefile  ex5module.ko  ex5module.mod  skeleton.c
src/03_drivers/exercise07/application/: Cargo.toml
src/03_drivers/exercise07/application/.cargo/: config.toml
src/03_drivers/exercise07/application/src/: main.rs
src/03_drivers/exercise07/driver/: Makefile  ex7module.ko  ex7module.mod  skeleton.c
src/04_file_systems/better_led/: CMakeLists.txt  better_led.c
src/04_file_systems/silly_led/: CMakeLists.txt  silly_led_control.c
teacher_solutions/01_environment/fibonacci/: app
teacher_solutions/02_modules/exercice04/: Makefile
